--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "@beer-logger/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
+    "@mui/material": "^5.14.15",
     "@swc/helpers": "~0.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.11.0",
@@ -41,7 +42,8 @@
     "nx": "17.0.1",
     "prettier": "^2.6.2",
     "typescript": "~5.1.3",
-    "vite": "~4.3.9",
+    "vite": "^4.5.0",
     "vitest": "~0.32.0"
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
