--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ node_modules
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# yarn pnp
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+.pnp.*
+
 # misc
 /.sass-cache
 /connect.lock
