--- a/package.json
+++ b/package.json
@@ -8,22 +8,31 @@
     "@emotion/styled": "11.11.0",
     "@mui/material": "^5.14.15",
     "@swc/helpers": "~0.5.2",
+    "axios": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.11.0",
+    "@nx/devkit": "17.0.1",
+    "@nx/esbuild": "17.0.3",
     "@nx/eslint": "17.0.1",
     "@nx/eslint-plugin": "17.0.1",
-    "@nx/js": "17.0.1",
+    "@nx/jest": "17.0.3",
+    "@nx/js": "17.0.3",
+    "@nx/node": "17.0.3",
+    "@nx/playwright": "17.0.1",
     "@nx/react": "17.0.1",
     "@nx/vite": "17.0.1",
     "@nx/workspace": "17.0.1",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
@@ -32,15 +41,21 @@
     "@vitejs/plugin-react": "~4.0.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "~0.32.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "17.0.1",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.1.3",
     "vite": "^4.5.0",
     "vitest": "~0.32.0"
