--- a/apps/smart-contract/tsconfig.app.json
+++ b/apps/smart-contract/tsconfig.app.json
@@ -1,10 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "esnext",
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", ".env"]
 }
