--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@mui/material": "^5.14.15",
+    "@orbs-network/ton-access": "^2.3.3",
     "@swc/helpers": "~0.5.2",
+    "@ton/core": "^0.53.0",
+    "@ton/crypto": "^3.2.0",
+    "@ton/ton": "^13.9.0",
     "axios": "^1.0.0",
+    "dotenv": "^16.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.17.0",
